Fixing spacing a bit more and using the speced colors

--- a/src/ui/public/chrome/directives/app_switcher/app_switcher.less
+++ b/src/ui/public/chrome/directives/app_switcher/app_switcher.less
@@ -4,13 +4,13 @@
 // as - App Switcher
 @as-open-width: 160px;
 @as-closed-width: 53px;
-@app-icon-height: 36px;
+@app-icon-height: 38px;
 @transition-time: .35s;
 @transition-delay: .25s;
 @app-links-wrapper-background: #3caed2;
 
-@firstLinkColor: @kibanaYellow1;
-@secondLinkColor: @kibanaGreen1;
+@firstLinkColor: #E4BB51;
+@secondLinkColor: #8AC336;
 @thirdLinkColor: #59C6C5;
 
 body { overflow-x: hidden; }
@@ -108,7 +108,7 @@ body { overflow-x: hidden; }
 
       > img {
         height: 16px;
-        margin-top: 6px;
+        margin-top: 8px;
       }
     }
 
